--- a/src/app/views/registration/recording-book/book-entry-editor.component.html
+++ b/src/app/views/registration/recording-book/book-entry-editor.component.html
@@ -1,12 +1,12 @@
-<form [formGroup]="formHandler.form" empNgFormKeyDownEnter autocomplete="off" class="form-section">
+<form [formGroup]="form" empNgFormKeyDownEnter autocomplete="off" class="form-section">
 
   <div fxLayout="row" fxLayout.lt-md="column">
 
     <div [fxFlex]="100/3">
       <div fxFlex="190px">
         <label>Número de inscripción:</label>
-        <input autocomplete="off" [formControlName]="controls.recordingNo" type="text" class="text-box"
-          style="width: 100px;" [class.invalid-control]="formHandler.getControl(controls.recordingNo).invalid">
+        <input autocomplete="off" formControlName="recordingNo" type="text" class="text-box"
+          style="width: 100px;" [class.invalid-control]="form.controls.recordingNo.invalid">
       </div>
     </div>
 
@@ -14,8 +14,8 @@
       <div fxFlex fxLayoutAlign="start">
         <div fxFlex="126px">
           <label>Fecha de presentación:</label>
-          <emp-ng-datepicker name="presentationTime" [formControlName]="controls.presentationTime"
-            [showError]="formHandler.getControl(controls.presentationTime).invalid">
+          <emp-ng-datepicker name="presentationTime" formControlName="presentationTime"
+            [showError]="form.controls.presentationTime.invalid">
 
           </emp-ng-datepicker>
         </div>
@@ -24,8 +24,8 @@
       <div fxFlex fxLayoutAlign="end">
         <div fxFlex="126px">
           <label>Fecha de registro:</label>
-          <emp-ng-datepicker name="authorizationDate" [formControlName]="controls.authorizationDate"
-            [showError]="formHandler.getControl(controls.authorizationDate).invalid">
+          <emp-ng-datepicker name="authorizationDate" formControlName="authorizationDate"
+            [showError]="form.controls.authorizationDate.invalid">
 
           </emp-ng-datepicker>
         </div>
@@ -46,7 +46,7 @@
   [showStatusField]="instrument.uid ? true : false"
   [submitButtonText]="instrument.uid ? 'Guardar los Cambios' : 'Agregar la inscripción a este volumen'"
   [addMode]="!instrument.uid"
-  defaultType="Resumen"
+  [defaultType]="defaultInstrumentType"
   (instrumentEditorEvent)="onInstrumentEditorEvent($event)">
 
 </emp-land-instrument-editor>
