--- a/src/app/views/certificate-emission/certificate-creator.component.html
+++ b/src/app/views/certificate-emission/certificate-creator.component.html
@@ -1,5 +1,4 @@
-<form [formGroup]="formHandler.form" empNgFormKeyDownEnter
-  autocomplete="off" class="form-section">
+<form [formGroup]="form" empNgFormKeyDownEnter autocomplete="off" class="form-section">
 
   <div fxLayout="column" fxLayoutGap="0.75rem">
 
@@ -7,21 +6,21 @@
 
       <div [fxFlex]="100/3">
         <label>Tipo de certificado:</label>
-        <emp-ng-select [formControlName]="controls.certificateType"
+        <emp-ng-select formControlName="certificateType"
           [items]="certificateTypesList"
           [loading]="isLoading"
-          [showError]="formHandler.showInvalidControl(controls.certificateType)"
-          (changes)="onCertificateTypeChange($event)">
+          [showError]="formHelper.isControlInvalid(form.controls.certificateType)"
+          (changes)="onCertificateTypeChanges($event)">
         </emp-ng-select>
       </div>
 
       <div [fxFlex]="200/3">
         <label>Sobre:</label>
-        <emp-ng-select [formControlName]="controls.registrationCommand"
+        <emp-ng-select formControlName="registrationCommand"
           [items]="issuingCommandsList"
           [placeholder]="issuingCommandsList.length === 0 ? 'Seleccione el certificado a registrar' : 'Seleccione'"
-          [showError]="formHandler.showInvalidControl(controls.registrationCommand)"
-          (changes)="onIssuingCommandChange($event)">
+          [showError]="formHelper.isControlInvalid(form.controls.registrationCommand)"
+          (changes)="onIssuingCommandChanges($event)">
         </emp-ng-select>
       </div>
 
@@ -34,9 +33,9 @@
         <div [fxFlex]="200/3">
           <label class="ellipsis"> Buscar y seleccionar el folio real: </label>
           <emp-land-recordable-subject-searcher
-            [formControlName]="controls.recordableSubject"
+            formControlName="recordableSubject"
             [type]="certificateRulesSelected.subjectType"
-            [showError]="formHandler.showInvalidControl(controls.recordableSubject)">
+            [showError]="formHelper.isControlInvalid(form.controls.recordableSubject)">
 
           </emp-land-recordable-subject-searcher>
         </div>
@@ -67,9 +66,9 @@
 
       <div fxFlex="100">
         <label> Nombre completo de la persona: </label>
-        <input [formControlName]="controls.personName"
+        <input formControlName="personName"
           type="text" class="text-box"
-          [class.invalid-control]="formHandler.showInvalidControl(controls.personName)">
+          [class.invalid-control]="formHelper.isControlInvalid(form.controls.personName)">
       </div>
 
     </div>
@@ -80,8 +79,8 @@
       <div fxFlex="100">
         <label> Descripción y datos del predio: </label>
         <textarea class="text-area" empNgTextareaAutoresize [maxHeightTextarea]="null" rows="1"
-          [formControlName]="controls.realEstateDescription"
-          [class.invalid-control]="formHandler.showInvalidControl(controls.realEstateDescription)">
+          formControlName="realEstateDescription"
+          [class.invalid-control]="formHelper.isControlInvalid(form.controls.realEstateDescription)">
 
         </textarea>
       </div>
@@ -95,8 +94,8 @@
       <div fxFlex fxLayoutAlign="end">
 
         <button type="submit"
-          [class.btn]="!formHandler.isValid"
-          [class.btn-action]="formHandler.isValid"
+          [class.btn]="!formHelper.isFormReady(form)"
+          [class.btn-action]="formHelper.isFormReady(form)"
           (click)="onSubmitCertificate()">
           Agregar el certificado
         </button>
