--- a/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
+++ b/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
@@ -1,28 +1,30 @@
-<form [formGroup]="formHandler.form" [empNgSpinnerHost]="spinner" empNgFormKeyDownEnter
+<form [formGroup]="form" [empNgSpinnerHost]="spinner" empNgFormKeyDownEnter
   autocomplete="off" class="form-section">
 
   <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
 
   <div fxLayout="column" fxLayout.lt-md="column" fxLayoutGap="0.75rem" fxLayoutGap.lt-md="0">
+
     <div class="section-title" *ngIf="title">{{ title }}</div>
 
     <div fxLayout="row" fxLayout.lt-md="column">
+
       <div [fxFlex]="100/3">
         <label>Tipo de instrumento:</label>
-        <emp-ng-select [formControlName]="controls.type"
+        <emp-ng-select formControlName="type"
           [bindLabel]="'typeName'"
           [bindValue]="'type'"
           [items]="instrumentTypesList"
-          [showError]="formHandler.showInvalidControl(controls.type)"
-          (changes)="onInstrumentTypeChange($event)">
+          [showError]="formHelper.isControlInvalid(form.controls.type)"
+          (changes)="onInstrumentTypeChanges($event)">
         </emp-ng-select>
 
       </div>
 
-      <ng-container *ngIf="!validateTypeSelected([InstrumentType.Resumen])">
+      <ng-container *ngIf="!validateTypeSelected([InstrumentTypes.Resumen])">
         <div [fxFlex]="100/3">
           <label>Fecha:</label>
-          <emp-ng-datepicker [formControlName]="controls.issueDate">
+          <emp-ng-datepicker formControlName="issueDate">
 
           </emp-ng-datepicker>
         </div>
@@ -30,8 +32,8 @@
         <div [fxFlex]="100/3" fxLayoutAlign="end">
           <div fxFlex="100px">
             <label>Número de hojas:</label>
-            <input [formControlName]="controls.sheetsCount" type="number" class="text-box"
-              [class.invalid-control]="formHandler.showInvalidControl(controls.sheetsCount)">
+            <input formControlName="sheetsCount" type="number" class="text-box"
+              [class.invalid-control]="formHelper.isControlInvalid(form.controls.sheetsCount)">
           </div>
         </div>
       </ng-container>
@@ -39,128 +41,133 @@
     </div>
 
     <ng-container *ngIf="typeSelected">
-      <div fxLayout="row" fxLayout.lt-md="column" *ngIf="!validateTypeSelected([InstrumentType.Resumen])">
+
+      <div fxLayout="row" fxLayout.lt-md="column" *ngIf="!validateTypeSelected([InstrumentTypes.Resumen])">
+
         <div fxFlex="100">
           <ng-container [ngSwitch]="typeSelected">
-            <label *ngSwitchCase="InstrumentType.DocumentoJuzgado">Autoridad:</label>
-            <label *ngSwitchCase="InstrumentType.DocumentoTerceros">Expedido por:</label>
-            <label *ngSwitchCase="InstrumentType.TituloPropiedad">Expedido por C.:</label>
+            <label *ngSwitchCase="InstrumentTypes.DocumentoJuzgado">Autoridad:</label>
+            <label *ngSwitchCase="InstrumentTypes.DocumentoTerceros">Expedido por:</label>
+            <label *ngSwitchCase="InstrumentTypes.TituloPropiedad">Expedido por C.:</label>
             <label *ngSwitchDefault>Notaría:</label>
           </ng-container>
-          <emp-ng-select [formControlName]="controls.issuer"
+
+          <emp-ng-select formControlName="issuer"
             [config]="{ clearable: true, hideSelected: true, minTermLength: issuerMinTermLength }"
             [items]="issuerList$ | async"
             [typeahead]="issuerInput$"
             [loading]="issuerLoading">
-          <ng-template #labelTemplate let-item="item">
-            <ng-container *ngIf="validateTypeSelected([InstrumentType.EscrituraPublica,
-                                                       InstrumentType.OficioNotaria])">
-              <span class="ng-value-label">
-                <strong>{{item.entity}}, {{item.place}} - </strong>
-                {{item.officialPosition}} - {{item.name}}
-              </span>
-            </ng-container>
-
-            <ng-container *ngIf="validateTypeSelected([InstrumentType.DocumentoJuzgado])">
-              <span class="ng-value-label">
-                <strong>{{item.place}} - </strong>
-                {{item.officialPosition}} - {{item.name}}
-              </span>
-            </ng-container>
-
-            <ng-container *ngIf="validateTypeSelected([InstrumentType.DocumentoTerceros,
-                                                       InstrumentType.TituloPropiedad])">
-              <span class="ng-value-label">
-                <strong>{{item.name}} - </strong>
-                {{item.officialPosition}}
-              </span>
-            </ng-container>
-          </ng-template>
-
-          <ng-template #optionTemplate let-item="item">
-            <ng-container *ngIf="validateTypeSelected([InstrumentType.EscrituraPublica,
-                                                       InstrumentType.OficioNotaria])">
-              <div class="ng-option item-template">
-                {{item.entity}}, {{item.place}}<br>
-                <span class="item-text-sm">
-                  <strong>{{item.officialPosition}}</strong>
-                  {{item.name}}
+            <ng-template #labelTemplate let-item="item">
+              <ng-container *ngIf="validateTypeSelected([InstrumentTypes.EscrituraPublica,
+                                                        InstrumentTypes.OficioNotaria])">
+                <span class="ng-value-label">
+                  <strong>{{item.entity}}, {{item.place}} - </strong>
+                  {{item.officialPosition}} - {{item.name}}
                 </span>
-              </div>
-            </ng-container>
+              </ng-container>
 
-            <ng-container *ngIf="validateTypeSelected([InstrumentType.DocumentoJuzgado])">
-              <div class="ng-option item-template">
-                <strong>{{item.place}},</strong> {{item.officialPosition}}<br>
-                {{item.name}}
-              </div>
-            </ng-container>
+              <ng-container *ngIf="validateTypeSelected([InstrumentTypes.DocumentoJuzgado])">
+                <span class="ng-value-label">
+                  <strong>{{item.place}} - </strong>
+                  {{item.officialPosition}} - {{item.name}}
+                </span>
+              </ng-container>
 
-            <ng-container *ngIf="validateTypeSelected([InstrumentType.DocumentoTerceros,
-                                                       InstrumentType.TituloPropiedad])">
-              <div class="ng-option item-template">
-                <strong>{{item.name}}</strong> <br>
-                {{item.officialPosition}}
-              </div>
-            </ng-container>
-          </ng-template>
-        </emp-ng-select>
-        </div>
-      </div>
+              <ng-container *ngIf="validateTypeSelected([InstrumentTypes.DocumentoTerceros,
+                                                        InstrumentTypes.TituloPropiedad])">
+                <span class="ng-value-label">
+                  <strong>{{item.name}} - </strong>
+                  {{item.officialPosition}}
+                </span>
+              </ng-container>
+            </ng-template>
 
-      <div fxLayout="row" fxLayout.lt-md="column">
-        <div [fxFlex]="100/3" fxFlex.lt-md="100"
-          *ngIf="validateTypeSelected([InstrumentType.OficioNotaria,
-                                       InstrumentType.DocumentoJuzgado,
-                                       InstrumentType.DocumentoTerceros,
-                                       InstrumentType.Resumen])">
+            <ng-template #optionTemplate let-item="item">
+              <ng-container *ngIf="validateTypeSelected([InstrumentTypes.EscrituraPublica,
+                                                        InstrumentTypes.OficioNotaria])">
+                <div class="ng-option item-template">
+                  {{item.entity}}, {{item.place}}<br>
+                  <span class="item-text-sm">
+                    <strong>{{item.officialPosition}}</strong>
+                    {{item.name}}
+                  </span>
+                </div>
+              </ng-container>
 
-          <ng-container [ngSwitch]="typeSelected">
-            <label *ngSwitchCase="InstrumentType.DocumentoTerceros">Tipo de documento:</label>
-            <label *ngSwitchCase="InstrumentType.Resumen">Tipo de documento:</label>
-            <label *ngSwitchDefault>Tipo de oficio:</label>
-          </ng-container>
+              <ng-container *ngIf="validateTypeSelected([InstrumentTypes.DocumentoJuzgado])">
+                <div class="ng-option item-template">
+                  <strong>{{item.place}},</strong> {{item.officialPosition}}<br>
+                  {{item.name}}
+                </div>
+              </ng-container>
 
-          <emp-ng-select [formControlName]="controls.kind"
-            [items]="instrumentKindsList"
-            [config]="{clearable: true}"
-            [bindValue]="'name'"
-            [showError]="formHandler.showInvalidControl(controls.kind)">
+              <ng-container *ngIf="validateTypeSelected([InstrumentTypes.DocumentoTerceros,
+                                                        InstrumentTypes.TituloPropiedad])">
+                <div class="ng-option item-template">
+                  <strong>{{item.name}}</strong> <br>
+                  {{item.officialPosition}}
+                </div>
+              </ng-container>
+            </ng-template>
           </emp-ng-select>
         </div>
 
-        <div [fxFlex]="100/3" fxFlex.lt-md="100" *ngIf="!validateTypeSelected([InstrumentType.Resumen])">
+      </div>
+
+      <div fxLayout="row" fxLayout.lt-md="column">
+
+        <div [fxFlex]="100/3" fxFlex.lt-md="100"
+          *ngIf="validateTypeSelected([InstrumentTypes.OficioNotaria,
+                                       InstrumentTypes.DocumentoJuzgado,
+                                       InstrumentTypes.DocumentoTerceros,
+                                       InstrumentTypes.Resumen])">
 
           <ng-container [ngSwitch]="typeSelected">
-            <label *ngSwitchCase="InstrumentType.EscrituraPublica">Escritura:</label>
-            <label *ngSwitchCase="InstrumentType.OficioNotaria">No. Oficio:</label>
-            <label *ngSwitchCase="InstrumentType.DocumentoJuzgado">Oficio:</label>
-            <label *ngSwitchCase="InstrumentType.DocumentoTerceros">No. Documento:</label>
-            <label *ngSwitchCase="InstrumentType.TituloPropiedad">Título de propiedad No.:</label>
+            <label *ngSwitchCase="InstrumentTypes.DocumentoTerceros">Tipo de documento:</label>
+            <label *ngSwitchCase="InstrumentTypes.Resumen">Tipo de documento:</label>
+            <label *ngSwitchDefault>Tipo de oficio:</label>
           </ng-container>
 
-          <input [formControlName]="controls.instrumentNo"
+          <emp-ng-select formControlName="kind"
+            [items]="instrumentKindsList"
+            [config]="{clearable: true}"
+            [bindValue]="'name'"
+            [showError]="formHelper.isControlInvalid(form.controls.kind)">
+          </emp-ng-select>
+        </div>
+
+        <div [fxFlex]="100/3" fxFlex.lt-md="100" *ngIf="!validateTypeSelected([InstrumentTypes.Resumen])">
+
+          <ng-container [ngSwitch]="typeSelected">
+            <label *ngSwitchCase="InstrumentTypes.EscrituraPublica">Escritura:</label>
+            <label *ngSwitchCase="InstrumentTypes.OficioNotaria">No. Oficio:</label>
+            <label *ngSwitchCase="InstrumentTypes.DocumentoJuzgado">Oficio:</label>
+            <label *ngSwitchCase="InstrumentTypes.DocumentoTerceros">No. Documento:</label>
+            <label *ngSwitchCase="InstrumentTypes.TituloPropiedad">Título de propiedad No.:</label>
+          </ng-container>
+
+          <input formControlName="instrumentNo"
             type="text"
             class="text-box uppercase">
         </div>
 
         <div [fxFlex]="100/3" fxFlex.lt-md="100"
-          *ngIf="validateTypeSelected([InstrumentType.EscrituraPublica,
-                                       InstrumentType.DocumentoJuzgado])">
+          *ngIf="validateTypeSelected([InstrumentTypes.EscrituraPublica,
+                                       InstrumentTypes.DocumentoJuzgado])">
           <ng-container [ngSwitch]="typeSelected">
-            <label *ngSwitchCase="InstrumentType.EscrituraPublica">Volumen / libro:</label>
+            <label *ngSwitchCase="InstrumentTypes.EscrituraPublica">Volumen / libro:</label>
             <label *ngSwitchDefault>Expediente:</label>
           </ng-container>
-          <input [formControlName]="controls.binderNo"
+          <input formControlName="binderNo"
             type="text"
             class="text-box uppercase">
         </div>
 
         <div [fxFlex]="100/3" fxFlex.lt-md="100" fxLayoutAlign="end"
-          *ngIf="validateTypeSelected([InstrumentType.EscrituraPublica])">
+          *ngIf="validateTypeSelected([InstrumentTypes.EscrituraPublica])">
           <div fxFlex="100px">
             <label>Folio del:</label>
-            <input [formControlName]="controls.folio"
+            <input formControlName="folio"
               type="text"
               class="text-box uppercase"
               style="width: 90px;">
@@ -168,7 +175,7 @@
 
             <div fxFlex="100px">
               <label>al:</label>
-              <input [formControlName]="controls.endFolio"
+              <input formControlName="endFolio"
                 type="text"
                 class="text-box uppercase"
                 style="width: 90px;">
@@ -176,21 +183,25 @@
         </div>
 
         <div [fxFlex]="100/3" fxFlex.lt-md="100"
-          *ngIf="validateTypeSelected([InstrumentType.TituloPropiedad])">
+          *ngIf="validateTypeSelected([InstrumentTypes.TituloPropiedad])">
             <label>Folio:</label>
-            <input [formControlName]="controls.folio"
+            <input formControlName="folio"
               type="text"
               class="text-box uppercase">
         </div>
+
       </div>
+
     </ng-container>
 
     <div fxLayout="row" fxLayout.lt-md="column">
+
       <div fxFlex>
         <label>Descripción del instrumento:</label>
-        <emp-ng-text-editor [formControlName]="controls.summary">
+        <emp-ng-text-editor formControlName="summary">
         </emp-ng-text-editor>
       </div>
+
     </div>
 
     <mat-divider *ngIf="actions.can.editInstrument || actions.show.registrationStamps || addMode"
@@ -215,9 +226,9 @@
           <span class="pr-1">Marcar la inscripción como:</span>
 
           <emp-ng-select
-            [formControlName]="controls.status"
+            formControlName="status"
             [items]="statusList"
-            [showError]="formHandler.showInvalidControl(controls.status)">
+            [showError]="formHelper.isControlInvalid(form.controls.status)">
           </emp-ng-select>
 
       </div>
@@ -225,7 +236,7 @@
       <div fxFlex fxLayoutAlign="end">
 
         <button *ngIf="editionMode && ( actions.can.editInstrument || addMode )"
-          (click)="submit()"
+          (click)="onSubmitClicked()"
           class="btn-action">
           {{ submitButtonText }}
         </button>
@@ -233,20 +244,20 @@
         <ng-container *ngIf="!editionMode">
 
           <button *ngIf="actions.can.openInstrument"
-            (click)="openRegistration()"
+            (click)="onOpenRegistrationClicked()"
             class="btn-action">
             Abrir registro
           </button>
 
           <button *ngIf="actions.can.closeInstrument"
-            (click)="closeRegistration()"
+            (click)="onCloseRegistrationClicked()"
             class="btn-action">
             Cerrar registro
           </button>
 
 
           <button *ngIf="actions.show.registrationStamps"
-            (click)="submitPrintRegistrationStampMedia()"
+            (click)="onPrintRegistrationStampMediaClicked()"
             class="btn-action">
             Imprimir sello interesado
           </button>
@@ -256,5 +267,7 @@
       </div>
 
     </div>
+
   </div>
+
 </form>
