--- a/src/app/views/transactions/transaction-editor/transaction-submitter/transaction-submitter.component.html
+++ b/src/app/views/transactions/transaction-editor/transaction-submitter/transaction-submitter.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formHandler.form" empNgFormKeyDownEnter autocomplete="off" class="form-section">
+<form [formGroup]="form" empNgFormKeyDownEnter autocomplete="off" class="form-section">
 
   <div fxLayout="column" fxLayout.lt-md="column" fxLayoutGap="0.75rem" fxLayoutGap.lt-md="0">
 
@@ -10,17 +10,18 @@
 
         <div [fxFlex]="100/3">
           <label>Recibo de pago:</label>
-          <input [formControlName]="controls.paymentReceiptNo" empNgInteger
+          <input formControlName="paymentReceiptNo" empNgInteger
             type="text"
             class="text-box"
-            [class.invalid-control]="formHandler.showInvalidControl(controls.paymentReceiptNo)">
+            [class.invalid-control]="formHelper.isControlInvalid(form.controls.paymentReceiptNo)">
         </div>
+
         <div fxFlex="100px" fxFlex.lt-md="none">
           <label>Importe del recibo:</label>
-          <input [formControlName]="controls.total" empNgCurrency
+          <input formControlName="total" empNgCurrency
             type="text"
             class="text-box"
-            [class.invalid-control]="formHandler.showInvalidControl(controls.total)">
+            [class.invalid-control]="formHelper.isControlInvalid(form.controls.total)">
         </div>
 
       </ng-container>
@@ -28,25 +29,28 @@
       <div fxFlex fxLayoutAlign="end end" style="padding-bottom: 2px;">
 
         <button *ngIf="canEdit" type="submit"
-          (click)="setPayment()"
-          [class.btn]="!formHandler.isValid"
-          [class.btn-action]="formHandler.isValid">
+          (click)="onSetPaymentClicked()"
+          [class.btn]="!formHelper.isFormReady(form)"
+          [class.btn-action]="formHelper.isFormReady(form)">
           Guardar recibo
         </button>
 
         <button *ngIf="canCancel" type="submit"
-          (click)="cancelPayment()"
+          (click)="onCancelPaymentClicked()"
           class="btn-warning">
           Cancelar recibo
         </button>
 
         <button *ngIf="canSubmit" type="submit"
-          (click)="submitTransaction()"
+          (click)="onSubmitTransactionClicked()"
           class="btn-action">
           Recibir
         </button>
 
       </div>
+
     </div>
+
   </div>
+
 </form>
